Fix the text display on mobile devices

--- a/assets/index.css
+++ b/assets/index.css
@@ -172,3 +172,17 @@ a:hover {
   border: 2px solid #bbb;
   border-radius: 10px;
 }
+
+/*
+ * Mobile-first
+ */
+
+@media (max-width: 768px) {
+  body {
+    padding: 5%;
+  }
+
+  .container {
+    width: 90%;
+  }
+}
